// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoActionButton should render correct with complete and edit features are disabled 1`] = `
<div
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Dropdown
    mouseEnterDelay={0.15}
    mouseLeaveDelay={0.1}
    overlay={
      <Menu
        className=""
        prefixCls="ant-menu"
        theme="light"
      >
        <MenuItem>
          <a
            onClick={[Function]}
          >
            Add Note
          </a>
        </MenuItem>
        <MenuItem>
          <ConfirmButton
            config={
              Object {
                "cancelText": "No",
                "okText": "Delete",
                "okType": "danger",
                "onOk": [Function],
                "title": "Are you sure delete this todo?",
              }
            }
          >
            Delete
          </ConfirmButton>
        </MenuItem>
      </Menu>
    }
    placement="bottomLeft"
    prefixCls="ant-dropdown"
    trigger={
      Array [
        "click",
      ]
    }
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <Icon
        type="ellipsis"
      />
    </Button>
  </Dropdown>
</div>
`;

exports[`TodoActionButton should render correct with complete and edit features are enabled 1`] = `
<div
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Dropdown
    mouseEnterDelay={0.15}
    mouseLeaveDelay={0.1}
    overlay={
      <Menu
        className=""
        prefixCls="ant-menu"
        theme="light"
      >
        <MenuItem>
          <ConfirmButton
            config={
              Object {
                "cancelText": "No",
                "okText": "Complete",
                "onOk": [Function],
                "title": "Are you sure complete this todo?",
              }
            }
          >
            Complete
          </ConfirmButton>
        </MenuItem>
        <MenuItem>
          <a
            onClick={[Function]}
          >
            Edit
          </a>
        </MenuItem>
        <MenuItem>
          <a
            onClick={[Function]}
          >
            Add Note
          </a>
        </MenuItem>
        <MenuItem>
          <ConfirmButton
            config={
              Object {
                "cancelText": "No",
                "okText": "Delete",
                "okType": "danger",
                "onOk": [Function],
                "title": "Are you sure delete this todo?",
              }
            }
          >
            Delete
          </ConfirmButton>
        </MenuItem>
      </Menu>
    }
    placement="bottomLeft"
    prefixCls="ant-dropdown"
    trigger={
      Array [
        "click",
      ]
    }
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <Icon
        type="ellipsis"
      />
    </Button>
  </Dropdown>
</div>
`;

exports[`TodoActionButton should render correct with complete feature is enabled 1`] = `
<div
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Dropdown
    mouseEnterDelay={0.15}
    mouseLeaveDelay={0.1}
    overlay={
      <Menu
        className=""
        prefixCls="ant-menu"
        theme="light"
      >
        <MenuItem>
          <ConfirmButton
            config={
              Object {
                "cancelText": "No",
                "okText": "Complete",
                "onOk": [Function],
                "title": "Are you sure complete this todo?",
              }
            }
          >
            Complete
          </ConfirmButton>
        </MenuItem>
        <MenuItem>
          <a
            onClick={[Function]}
          >
            Add Note
          </a>
        </MenuItem>
        <MenuItem>
          <ConfirmButton
            config={
              Object {
                "cancelText": "No",
                "okText": "Delete",
                "okType": "danger",
                "onOk": [Function],
                "title": "Are you sure delete this todo?",
              }
            }
          >
            Delete
          </ConfirmButton>
        </MenuItem>
      </Menu>
    }
    placement="bottomLeft"
    prefixCls="ant-dropdown"
    trigger={
      Array [
        "click",
      ]
    }
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <Icon
        type="ellipsis"
      />
    </Button>
  </Dropdown>
</div>
`;

exports[`TodoActionButton should render correct with edit feature is enabled 1`] = `
<div
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Dropdown
    mouseEnterDelay={0.15}
    mouseLeaveDelay={0.1}
    overlay={
      <Menu
        className=""
        prefixCls="ant-menu"
        theme="light"
      >
        <MenuItem>
          <a
            onClick={[Function]}
          >
            Edit
          </a>
        </MenuItem>
        <MenuItem>
          <a
            onClick={[Function]}
          >
            Add Note
          </a>
        </MenuItem>
        <MenuItem>
          <ConfirmButton
            config={
              Object {
                "cancelText": "No",
                "okText": "Delete",
                "okType": "danger",
                "onOk": [Function],
                "title": "Are you sure delete this todo?",
              }
            }
          >
            Delete
          </ConfirmButton>
        </MenuItem>
      </Menu>
    }
    placement="bottomLeft"
    prefixCls="ant-dropdown"
    trigger={
      Array [
        "click",
      ]
    }
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <Icon
        type="ellipsis"
      />
    </Button>
  </Dropdown>
</div>
`;
